2020-10-29  b606  <7627533+b606@users.noreply.github.com>

	* LanguageWorker_French.cs: Fix: ReGex elisions for "(à|À)
	<tag>le(s?) " separated with a text color tag should work
	properly.

	* packages.config:
	* RimWorld_LanguageWorker_French.csproj: Lib.Harmony updated
	to version 2.0.3.

2020-09-26  b606  <7627533+b606@users.noreply.github.com>

	* LanguageWorker_French.cs: Update to version 1.2.
	First names starting with 'H' or short names starting with
	a vowel do not require elision. Ex. "le chapeau de Anne" or
	"le chapeau de Hector" instead of "le chapeau d'Anne" or
	"le chapeau d'Hector".

2020-05-11  b606  <7627533+b606@users.noreply.github.com>

	* RimWorld_LanguageWorker_French.csproj: Update project files
	to define and use $(RimWorldFolder), $(RimWorldReferences) and
	$(ModsFolder) depending on the detected $(OS).

2020-05-07  b606  <7627533+b606@users.noreply.github.com>

	* Patcher.cs: Move Log file from libHarmony FileLog to
	LanguageWorker_French log.

2020-05-07  b606  <7627533+b606@users.noreply.github.com>

	* RimWorld_LanguageWorker_French.csproj: Customized build
	process with targets InstallModOnUnix and InstallModOnWindows

2020-05-07  b606  <7627533+b606@users.noreply.github.com>

	* LanguageWorker_French.cs: Clean out debugging code

2020-05-05  b606  <7627533+b606@users.noreply.github.com>

	* LanguageWorker_French.cs: Pluralize function completed for
	quasi-totality of the labels in the game. The unit test
	contains 1555 of them.

2020-05-04  b606  <7627533+b606@users.noreply.github.com>

	* InspectionPatch.cs: Extended InspectionPatch to many
	GenerateGrammarRequest methods. Missing:
	PlayLogEntry_Interaction.

	* RulesForDefPatch.cs:
	* LanguageWorker_French.cs:
	* RulesForBodyPartRecordPatch.cs:
	* RimWorld_LanguageWorker_French.csproj: Added patches for
	RulesForDef and RulesForBodyPartRecord in GrammarUtility.
	Detect labels which are already in plural. Fix gender (do not
	use "Proits"-> son/sa) and rules for plural only labels.
