@@ -1,3 +1,10 @@
+2020-10-30  b606  <7627533+b606@users.noreply.github.com>
+
+	* LanguageWorker_French.cs: Changed the char code for
+	permanently suppress elision to '\200C' (zero-width non joiner
+	space) in both WithDefiniteArticle() and
+	WithIndefiniteArticle().
+
 2020-10-29  b606  <7627533+b606@users.noreply.github.com>
 
 	* LanguageWorker_French.cs: Fix: ReGex elisions for "(à|À)
